[gd_scene load_steps=4 format=3 uid="uid://mmr52ytqbmhh"]

[ext_resource type="Script" path="res://scripts/var_input.gd" id="1_4ab8i"]
[ext_resource type="Texture2D" uid="uid://dkxe72g2meo65" path="res://assets/arrow.png" id="2_cjk3l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hre4d"]
size = Vector2(60.3608, 71.3203)

[node name="var_input" type="Label"]
offset_right = 40.0
offset_bottom = 23.0
text = "20"
script = ExtResource("1_4ab8i")

[node name="up_input" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="up_input"]
position = Vector2(9, -12)
shape = SubResource("RectangleShape2D_hre4d")

[node name="Sprite2D" type="Sprite2D" parent="up_input"]
position = Vector2(9, -12)
texture = ExtResource("2_cjk3l")

[node name="down_input" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="down_input"]
position = Vector2(10, 35)
shape = SubResource("RectangleShape2D_hre4d")

[node name="Sprite2D" type="Sprite2D" parent="down_input"]
position = Vector2(10, 35)
rotation = 3.14159
texture = ExtResource("2_cjk3l")

[node name="delay" type="Timer" parent="."]

[connection signal="body_entered" from="up_input" to="." method="_on_up_input_body_entered"]
[connection signal="body_exited" from="up_input" to="." method="_on_up_input_body_exited"]
[connection signal="body_entered" from="down_input" to="." method="_on_down_input_body_entered"]
[connection signal="body_exited" from="down_input" to="." method="_on_down_input_body_exited"]
[connection signal="timeout" from="delay" to="." method="_on_delay_timeout"]
